# pico-exercises

./: .gitignore  CMakeLists.txt  README.md
buttonkit/: CMakeLists.txt  README.md  buttonkit.c  buttonkit.h
exercise1/: CMakeLists.txt  main.c
exercise2/: CMakeLists.txt  main.c
exercise3/: CMakeLists.txt  main.c
exercise4/: CMakeLists.txt  main.c
exercise5/: CMakeLists.txt  main.c
